[package]
name = "bitcoin-price"
version = "0.1.1"
edition = "2018"
description = "Get the Bitcoin price"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
coinbase-bitcoin = { version = "0.1.0" }
